--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,3 +1,7 @@
+:root {
+  --main-bg-color: #cfb63e;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,47 +10,65 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
 }
 
-header {
+header > nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 10vh;
 }
 
-header > img {
-  width: 10vw;
+header {
+  position: relative;
+  background: url("./img/cover.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+header > * {
+  z-index: 10;
+  position: relative;
+}
+
+header::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+header > nav > img {
+  width: 120px;
   margin-left: 1.3rem;
 }
 
-header > ul {
+header > nav > ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-right: 2rem;
 }
 
-header > ul > li {
+header ul > li {
   width: 10vw;
   list-style: none;
 }
 
-header > ul > li > a {
+header ul > li > a {
   font-size: 1rem;
   text-decoration: none;
   color: #fff;
 }
 
-header > ul > li > a:hover {
-  color: #cfb63e;
-}
-
-main {
-  width: 70vw;
-  margin: 0 auto;
+header ul > li > a:hover {
+  color: var(--main-bg-color);
 }
 
 #home {
@@ -55,14 +77,16 @@ main {
   text-align: left;
   flex-direction: column;
   height: 90vh;
+  width: 70vw;
+  margin: 0 auto;
 }
 
 #home > h2 {
   display: flex;
   flex-direction: row;
-  color: #cfb63e;
+  color: var(--main-bg-color);
   font-size: 1.3rem;
-  width: 30%;
+  width: 40%;
 }
 
 #home > h2::before {
@@ -87,4 +111,44 @@ main {
 
 #home > div > .left > h1 {
   font-size: 3rem;
+}
+
+#home > div > .right {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 30%;
+}
+
+#home > div > .right > a {
+  border: solid 1px #fff;
+  width: 200px;
+  margin: 0.5rem 0;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+#home > div > .right > a:hover {
+  background-color: var(--main-bg-color);
+  color: #fff;
+}
+
+#home a {
+  text-decoration: none;
+  color: #fff;
+  margin-top: 2rem;
+}
+
+#home a:hover {
+  color: var(--main-bg-color);
+}
+
+#home a i {
+  margin-left: 0.5rem;
+  color: var(--main-bg-color);
+}
+
+main {
+  color: #000;
 }
