--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -21,6 +21,22 @@ body {
 header {
   background: url("../img/cover.jpg") center center/cover no-repeat;
   min-height: 100vh;
+  position: relative;
+}
+
+header::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+header * {
+  z-index: 10;
 }
 
 .navbar {
@@ -100,4 +116,43 @@ header {
   .navbar-links.active {
     display: flex;
   }
+}
+
+#home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  width: 70vw;
+  max-width: 1300px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.greeting {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+}
+
+.line {
+  display: inline-block;
+  height: 2px;
+  width: 5%;
+  background-color: var(--main-bg-color);
+  margin: 0 1rem 0 2rem;
+}
+
+#home h2 {
+  font-size: 1.5rem;
+  color: var(--main-bg-color);
+}
+
+#home .lead {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
