--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -11,17 +11,19 @@
 html {
   scroll-behavior: smooth;
   color: #fff;
+  scroll-snap-type: y proximity;
 }
 
 body {
   color: #fff;
-  background-color: #000;
+  overflow-x: hidden;
 }
 
 header {
   background: url("../img/cover.jpg") center center/cover no-repeat;
   min-height: 100vh;
   position: relative;
+  scroll-snap-align: start;
 }
 
 header::before {
@@ -142,7 +144,7 @@ header * {
   height: 2px;
   width: 5%;
   background-color: var(--main-bg-color);
-  margin: 0 1rem 0 2rem;
+  margin: 0 1rem 0 3rem;
 }
 
 #home h2 {
@@ -155,4 +157,154 @@ header * {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.lead .left {
+  width: 70%;
+  margin: 1rem 0;
+}
+
+.lead .left h1 {
+  font-size: 3rem;
+}
+
+.lead .right {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.lead .right a {
+  width: 80%;
+  border: 1px solid white;
+  padding: 1rem;
+  margin: 1rem 0;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: #fff;
+}
+
+.lead .right a:hover {
+  background-color: var(--main-bg-color);
+  transition: background-color 0.2s ease-in-out;
+}
+
+#home > a {
+  width: 90%;
+  text-align: left;
+  text-decoration: none;
+  color: #fff;
+}
+
+#home i {
+  color: var(--main-bg-color);
+}
+
+#about {
+  width: 70vw;
+  color: #000;
+  margin: 0 auto;
+  padding-top: 5rem;
+  min-height: 100vh;
+  scroll-snap-align: start;
+}
+
+#about > h3 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0 0 1rem 0;
+  color: var(--main-bg-color);
+}
+
+#about > h2 {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 300;
+}
+
+#about .lead {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
+  min-height: 60vh;
+}
+
+#about .lead .left {
+  width: 50%;
+  min-height: 40vh;
+  margin: 2rem 3rem;
+}
+
+#about .lead .left h4 {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+}
+
+#about .lead .left p {
+  line-height: 1.6;
+  font-size: 1.2rem;
+  color: #555;
+}
+
+#about .lead .right {
+  width: 50%;
+  min-height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 2rem 3rem;
+}
+
+#about .lead .right h4 {
+  font-size: 1.5rem;
+  margin: 1rem 0;
+  text-align: left;
+  width: 100%;
+}
+
+#about .lead .right ul {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+#about .lead .right li {
+  list-style: none;
+  padding: 1rem;
+  margin: 0.5rem;
+  background-color: #eee;
+}
+
+#work {
+  width: 100vw;
+  background-color: #eee;
+  color: #000;
+  padding-top: 5rem;
+  min-height: 100vh;
+  scroll-snap-align: start;
+}
+
+.work-inner {
+  width: 70vw;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.work-inner > h3 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0 0 1rem 0;
+  color: var(--main-bg-color);
+}
+
+.work-inner > h2 {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 300;
 }
