--- a/ecommerce-site/src/components/custom-button/custom-button.css
+++ b/ecommerce-site/src/components/custom-button/custom-button.css
@@ -13,6 +13,12 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .custom-button:hover {
@@ -28,6 +34,18 @@
 
 .custom-button.google-sign-in:hover {
   background-color: #357ae8;
+  border: none;
+}
+
+.custom-button.inverted {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+}
+
+.custom-button.inverted:hover {
+  background-color: #000;
+  color: #fff;
   border: none;
 }
 /*# sourceMappingURL=custom-button.css.map */
