added checkout page and checkout-item component

--- a/ecommerce-site/src/components/header/header.css
+++ b/ecommerce-site/src/components/header/header.css
@@ -16,6 +16,11 @@
   padding: 25px;
 }
 
+.header .logo-container .logo {
+  -webkit-transform: translate(-25%, -25%);
+          transform: translate(-25%, -25%);
+}
+
 .header .options {
   width: 50%;
   height: 100%;
