--- a/ecommerce-site/src/components/collection-item/collection-item.css
+++ b/ecommerce-site/src/components/collection-item/collection-item.css
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,6 +12,7 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
+  margin: 0 5px;
 }
 
 .collection-item .image {
