--- a/ecommerce-site/src/pages/checkout/checkout.css
+++ b/ecommerce-site/src/pages/checkout/checkout.css
@@ -40,4 +40,16 @@
   margin-left: auto;
   font-size: 36px;
 }
+
+.checkout-page button {
+  margin-left: auto;
+  margin-top: 50px;
+}
+
+.checkout-page .test-warning {
+  text-align: center;
+  margin-top: 40px;
+  font-size: 24px;
+  color: red;
+}
 /*# sourceMappingURL=checkout.css.map */
